# AnimeParsers

./: .gitignore  CHANGELOG.md  KODIK_API.md  LICENSE  README.md  SHIKI_API.md  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: publish.yml
kdk_tokns/: TOKENS.md  tokens.json
moe_players/: classes.py
moe_players/providers/: __init__.py  aniboom.py
parser_tests/: animego_test.py  jutsu_test.py  kodik_test.py  shiki_test.py
src/: tests.py
src/anime-parsers-ru/: parsers.py
src/anime_parsers_ru/: __init__.py  api_kodik.py  errors.py  internal_tools.py  parser_aniboom.py  parser_aniboom_async.py  parser_animego.py  parser_animego_async.py  parser_cvh_async.py  parser_jutsu.py  parser_kodik.py  parser_kodik_async.py  parser_shikimori.py  parser_shikimori_async.py
src/anime_parsers_ru.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
