[project]
name = "anime_parsers_ru"
version = "1.7.1"
authors = [
  { name="YaNesyTortiK", email="ya.nesy.tortik.email@gmail.com"},
]
maintainers = [
  { name="YaNesyTortiK", email="ya.nesy.tortik.email@gmail.com"},
]
description = "Python package for parsing russian anime players"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4>=4.12",
  "requests>=2.32"
]
license = {file = "LICENSE"}
keywords = ["anime", "parser", "kodik", "parsing", "aniboom", "animego", "jutsu", "shikimori", "аниме", "парсинг", "кодик", "парсер", "анибум", "анимего", "джутсу", "шикимори"]

[project.optional-dependencies]
async = ["aiohttp>=3.9.5"]
lxml = ["lxml>=5.2"]

[project.urls]
Homepage = "https://github.com/YaNesyTortiK/AnimeParsers"
Issues = "https://github.com/YaNesyTortiK/AnimeParsers/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"