[project]
name = "anime_parsers_ru"
version = "1.15.0"
authors = [
  { name="YaNesyTortiK", email="ya.nesy.tortik.email@gmail.com"},
]
maintainers = [
  { name="YaNesyTortiK", email="ya.nesy.tortik.email@gmail.com"},
]
description = "Python package for parsing russian anime players"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4>=4.14.0",
  "requests[socks]>=2.32.0"
]
license-files = ["LICENSE"]
keywords = ["anime", "parser", "kodik", "parsing", "aniboom", "animego", "jutsu", "shikimori", "kodikapi", "kodik api", "аниме", "парсинг", "кодик", "парсер", "анибум", "анимего", "джутсу", "шикимори", "кодик апи"]

[project.optional-dependencies]
async = ["aiohttp>=3.10.0", "aiohttp-socks>=0.11.0"]
lxml = ["lxml>=6.0.0"]

[project.urls]
Homepage = "https://github.com/YaNesyTortiK/AnimeParsers"
Issues = "https://github.com/YaNesyTortiK/AnimeParsers/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"